@@ -3,6 +3,9 @@
 	* rsvg-base.c: Handle system, public, and unparsed entity declarations
 	better. Probably not 100% conformant, but probably better than not
 	doing it at all.
+
+	* rsvg-styles.c: Add support for the CSS @import directive. Probably isn't 100%
+	conformant, but probably better than not doing it at all.
 	
 2006-04-27 Dom Lachowicz <cinamod@hotmail.com>
 
